- New cvars from ioQ3 updates:
  - s_muteWhenUnfocused to mute sound when unfocused (default=0)
  - r_allowResize to allow window resizing in windowed rendering mode (default=0), only with SDL support
- Thanks to ioQ3, passed rcon commands are logged
- callvote string is logged in server log
- new "cancelvote" server side command, can only be used by admins
- support for more crosshair
- support for showing who is the VoIP speaker, thanks to tremfusion team:
  - Thanks Mercury and Amanieu
  - Added cl_voipShowSender and cl_voipSenderPos cvar:
    - cl_voipShowSender must be set
	- cl_voipSenderPos can be set from 0 to 5 to choose where the sender will be shown on the screen
- support for shooter_dynamite and shooter_molotov map entities
- Doors won't try to move players now
- support UI item to select OpenAL device from available OpenAL devices
- support new console aspects, thanks to Conq idea. Added 5 cvars to control it:
  - cl_consoleType: "0" classic wooden wall texture, "1" color
  - cl_consoleRed: from 0.0 to 1.0, the red component for the color console
  - cl_consoleGreen: from 0.0 to 1.0, the green conponent for the color console
  - cl_consoleBlue: from 0.0 to 1.0, the blue component for the color console
  - cl_consoleTransparency: from 0.0 to 1.0, the alpha component or transparency for any kind of console
- support new server cvars:
  - g_startingWeapon to set which weapon player will own at startup (default "2" for remington pistol)
  - g_startingMoney to set how much money player will get during startup (default "20")
  - g_bulletDamageMode to change between bullet damage mode, support values:
    - 0: same formula than Smokin'Guns 1.0, the default
    - 1: new advanced linear formula proposed by tequila tuable with following cvars:
         - g_bulletDamageALDRmidrangefactor: must be between 1 and 10, default 2
         - g_bulletDamageALDRmidpointfactor: must be between 0 and 1, default 0.66